# paperlite

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  DEPLOYMENT.md  Dockerfile  LICENSE  PAPERLITE_CURRENT_STATE.md  README.md  README.zh-CN.md  RELEASE.md  RELEASE.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  SKILL.md  SOURCES.md  docker-compose.yml  main.py
paperlite/: PROJECT_OVERVIEW.md  README.md  SOURCE_CATALOG.md  pyproject.toml
paperlite/paperlite/: __init__.py  agent.py  ai_filter.py  api.py  api_agent.py  api_catalog.py  api_common.py  api_daily.py  api_library.py  api_ops.py  api_zotero.py  catalog_maintenance.py  catalog_quality.py  category_view.py  cli.py  config.py  core.py  daily_crawl.py  daily_dates.py  daily_export.py  daily_frontend.py  dedupe.py  doctor.py  endpoint_health.py  endpoint_view.py  endpoints.yaml  enrichment_matching.py  exporters.py  frontend.py  http_client.py  identity.py  integrations.py  llm.py  mcp_server.py  metadata_cleaning.py  models.py  ops_frontend.py  profiles.py  profiles.yaml  registry.py  (+23 more)
paperlite/tests/: test_agent_api.py  test_agent_handoff_docs.py  test_agent_llm.py  test_api_browser.py  test_catalog_maintenance.py  test_catalog_quality.py  test_cli.py  test_config.py  test_core_enrich.py  test_daily_crawl_api.py  test_daily_dates.py  test_dedupe_merge.py  test_doctor.py  test_endpoint_health.py  test_exporters.py  test_identity.py  (+11 more)
(+33 files in other folders)
